--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div class="signup-container">
     <div class="header">
-        <h1>Wel Come!</h1>
+        <h1>Welcome to <br> CodeVerse Studio..!</h1>
         <p>We're excited to have you join us. Sign up to get started.</p>
     </div>
 
